some wording changes

--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,10 @@ Justin is a Korean-American living in Helsinki. In his previous life, he was a m
             <div class='details closed'>
               <h4>Abstract</h4>
               <div class='abstract'>
-                TBA
+                The talks will form a complete introduction to testing in Haskell.
+                They will cover the different kinds of tests, and how to write them in
+                Haskell, best practices and generators and their best practices. It
+                will be a combination of lectures and hands-on workshops.
               </div>
 
               <h4>About the speaker</h4>
@@ -514,7 +517,7 @@ coffee: strong.
 
               <h4>About the speaker</h4>
               <div class='speaker'>
-                Software engineer at Tweag, currently working at implementation of linear types in GHC.
+                 Haskell developer at <a href='http://formation.ai/'>Formation</a>.
               </div>
             </div>
           </div>
