--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@ Justin is a Korean-American living in Helsinki. In his previous life, he was a m
           <div class='talk'>
             <div class='header'>
               <h4 class='author'>Tom Sydney Kerckhove:</h4> 
-              <h4 class='title'>Testing for beginners - <b>6 hours</b></h4>
+              <h4 class='title'>Testing for beginners - <b>5 hours</b></h4>
               <div class='level'>
                 <span class='badge badge-success'>Beginner</span>
               </div>
@@ -384,7 +384,7 @@ for us).</p>
           <div class='talk'>
             <div class='header'>
               <h4 class='author'>Laurens Duijvesteijn:</h4> 
-              <h4 class='title'>Haskell for boring software - <b>6 hours</b></h4>
+              <h4 class='title'>Boring software with Haskell - <b>6 hours</b></h4>
               <div class='level'>
                 <span class='badge badge-intermediate'>Intermediate</span>
               </div>
@@ -831,7 +831,7 @@ coffee: strong.
                   <time>10</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>1/6</span>
                    </div>
                 </div>
@@ -840,7 +840,7 @@ coffee: strong.
                   <time>11</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>2/6</span>
                    </div>
                 </div>
@@ -849,7 +849,7 @@ coffee: strong.
                   <time>12</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>3/6</span>
                    </div>
                 </div>
@@ -1185,7 +1185,7 @@ coffee: strong.
                   <time>10</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>4/6</span>
                    </div>
                 </div>
@@ -1194,7 +1194,7 @@ coffee: strong.
                   <time>11</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>5/6</span>
                    </div>
                 </div>
@@ -1203,7 +1203,7 @@ coffee: strong.
                   <time>12</time>
                   <div class='talk'>
                      <div class='name'>Laurens Duijvesteijn</div>
-                     <div class='topic'>Haskell for boring software</div>
+                     <div class='topic'>Boring software with Haskell</div>
                      <span class='part'>6/6</span>
                    </div>
                 </div>
