--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,10 @@
 
               <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The first edition was really successful, so we're really happy that we can continue offering it this year as well.</p>
 
-              <h5 class='center'>Scholarship applications are closed</h5>
+              <h4 class='external-btn'>
+                <a class="button button-primary" href="https://docs.google.com/forms/d/1WUg1UTIOodSxjzxwFk0dToQNsLtJqtxc8GeK2cbhoUM/" target='_blank'>Apply for a scholarship</a>
+              </h4>
+              <h5>Deadline: 29th of February 2020</h5>
           </div>
       </div>
 
@@ -104,17 +107,17 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/krzysiek.jpg' />
-                    <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
+                    <img src='/static/christophe.jpg' />
+                    <h3 class='name'><span class='first'>C</span>hristophe <span class='second'>S</span>cholliers</h3>
                     <div class='bio'>
-                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
+                      Professor in computer science at the University of Gent
                     </div>
                 </div>
                 <div class='col-4 column'>
                     <img src='/static/penner.jpg' />
                     <h3 class='name'><span class='first'>C</span>hris <span class='second'>P</span>enner</h3>
                     <div class='bio'>
-                      Acro yogi, chiptune artist, programmer.
+                      Acro yogi, chiptune artist, programmer
                     </div>
                 </div>
             </div>
@@ -129,18 +132,18 @@
                 </div>
 
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/gajda.jpg' />
                     <h3 class='name'><span class='first'>G</span>rzegorz <span class='second'>G</span>ajda</h3>
                     <div class='bio'>
-                      A functional programmer who straddles the boundary between industry and academia. 
+                      Promoting Haskell for Data Scientists
                     </div>
                 </div>
 
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/miszczyszyn.jpg' />
                     <h3 class='name'><span class='first'>M</span>ichał <span class='second'>M</span>iszczyszyn</h3>
                     <div class='bio'>
-                      A functional programmer who straddles the boundary between industry and academia. 
+                      Full Stack Developer at <a href='https://x-team.com'>X-Team</a>
                     </div>
                 </div>
             </div>
@@ -171,10 +174,10 @@
 
             <div class='row'>
                 <div class='col-4 column'>
-                    <img src='/static/christophe.jpg' />
-                    <h3 class='name'><span class='first'>C</span>hristophe <span class='second'>S</span>cholliers</h3>
+                    <img src='/static/krzysiek.jpg' />
+                    <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
                     <div class='bio'>
-                      Professor in computer science at the University of Gent
+                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
                     </div>
                 </div>
                 <div class='col-4 column'></div>
@@ -193,6 +196,23 @@
         </div>
     </div>
 
+    <div class='call-for-speakers'>
+      <div class='container'>
+        <h2 class='title left'><span class='first'>C</span>all for <span class='second'>S</span>peakers</h2>
+
+        <p>Do you want to lead workshops at the summer school? We would love to invite you to be a speaker at our event.</p>
+
+        <p>We are looking for people interested in leading workshops spanning four to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will have three tracks, a beginners one that caters to programmers that have limited Haskell experience and two for people who are comfortable with the language and want to learn new concepts. We will allocate your talk to a track that fits it best based on your answers on the submission form.</p>
+
+        <p>Our summer school is not about making money, it's about spreading our love of Haskell and functional programming. Because of that we will cover accommodation costs along with a ticket to the event for all speakers.</p>
+
+        <h2 class='external-btn'>
+          <a class="button button-primary" href="https://docs.google.com/forms/d/1RJu05ITlTjKZKomTFzPhBVmyUzPCi6QyaEf3Q9kiUeY" target='_blank'>Submit a proposal</a>
+        </h2>
+
+        <h4>Deadline: 29th of February 2020</h4>
+      </div>
+    </div>
 
 
     <div class='partners'>
@@ -225,7 +245,27 @@
     <div class='sign-up'>
         <div class='container'>
 
-            <div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/checkout/new-session/id/329019/chk/4a71/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="https://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://www.tickettailor.com/js/widgets/min/tt-widget.js" data-url="https://www.tickettailor.com/checkout/new-session/id/329019/chk/4a71/ref/website_widget/" data-type="inline" data-inline-minimal="true" data-inline-show-logo="false"  data-inline-bg-fill="true"></script></div>
+          <div id="eventbrite-widget-container-85615216417"></div>
+
+            <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
+
+            <script type="text/javascript">
+                var exampleCallback = function() {
+                    console.log('Order complete!');
+                };
+
+                window.EBWidgets.createWidget({
+                    // Required
+                    widgetType: 'checkout',
+                    eventId: '85615216417',
+                    iframeContainerId: 'eventbrite-widget-container-85615216417',
+
+                    // Optional
+                    iframeContainerHeight: 550,  // Widget height in pixels. Defaults to a minimum of 425px if not provided
+                    onOrderComplete: exampleCallback  // Method called when an order has successfully completed
+                });
+            </script>
+
 
             <div class='col-12 column email'>
                 Got a question? Email us at
