styling and purchase applet

--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,7 @@
     <div class='sign-up'>
         <div class='container'>
 
-          <div id="eventbrite-widget-container-85615216417"></div>
+          <div id="eventbrite-widget-container-85615216417" class='eb-container'></div>
 
             <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
 
@@ -261,7 +261,7 @@
                     iframeContainerId: 'eventbrite-widget-container-85615216417',
 
                     // Optional
-                    iframeContainerHeight: 550,  // Widget height in pixels. Defaults to a minimum of 425px if not provided
+                    iframeContainerHeight: 620,  // Widget height in pixels. Defaults to a minimum of 425px if not provided
                     onOrderComplete: exampleCallback  // Method called when an order has successfully completed
                 });
             </script>
