further design updates

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
               <a scroll-to='.speakers'>Speakers</a>
           </div>
           <div class='item'>
-              <a scroll-to='#talks'>Call for Speakers</a>
+              <a scroll-to='.call-for-speakers'>Call for Speakers</a>
           </div>
           <div class='item'>
             Previously: 
@@ -66,28 +66,21 @@
     <div class='about-us'>
       <div class='container'>
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
-          <p>Monadic Party is a four-days long Haskell summer school. Our vision is to teach in depth with each talk spanning multiple sessions. Because of the additional time at our disposal we can get deeper into each topic to show a larger part of the story behind the subject.</p>
+          <p>Monadic Party is a four-days long Haskell summer school. Our vision is to teach in depth with each talk taking between four and six sessions. There are three tracks, one for beginners in Haskell and two aimed at intermediate to advanced Haskell programmers.
 
-          <p>We will have three tracks, one for programmers that aren't experienced in Haskell and would like to learn it from the basic concepts. The other tracks are for people already familiar with the language and will present a selection of talks and workshops on a variety of topics. We will announce the list of topics after our call for speakers closes at the end of February.</p>
+          <p>For the attendees that arrive on the 15th, and we have a preparty lined up.</p>
 
-          <p>For the attendees that arrive on the 15th, and we have a preparty lined up. Check a signup email for more details.</p>
-
-          <p>We chose Poznan to host the summer school because of its architecture, culture and nightlife. The venue is a recently restored lovely old building at <a href='http://mlynska12.pl/' target='_blank'>Mlynska 12</a> where we have the whole highest floor at our disposal. So the only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch, tea and coffee is included in the ticket price.</p>
+          <p>The venue is a recently restored lovely old building at <a href='http://mlynska12.pl/' target='_blank'>Mlynska 12</a> where we have the whole highest floor at our disposal. The only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch, tea and coffee is included in the ticket price.</p>
 
           <h2 class='title left'><span class='first'>G</span>etting <span class='second'>T</span>here</h2>
 
-          <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Mlynska 12</a>, Poznan, Poland. The venue is in the Old Town, a walking distance from a town square. We would love to help you with choosing a place to stay. If you have any questions, please email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
-
-          <p>In terms of travel, <a href='https://wizzair.com' target='_blank'>WizzAir</a>, <a href='https://www.ryanair.com/gb/en/' target='_blank'>Ryanair</a>, <a href='https://www.lufthansa.com/uk/en/Homepage' target='_blank'>Lufthansa</a> and <a href='http://www.lot.com/gb/en' target='_blank'>LOT</a> all have a dense network of daily connections to and from the city. If you want to save some carbon dioxide, there are frequent train connections from Germany and inside Poland. Buses are also a good budget option with <a href='http://www.polskibus.com/en/index.htm' target='_blank'>PolskiBus</a> which operates a lot of routes in the region.</p>
+          <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Mlynska 12</a>, Poznan, Poland. The venue is in the Old Town, a walking distance from the town square. We would love to help you with choosing a place to stay. If you have any questions, please email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
 
           <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
 
-              <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
-              <p>We're the organizers of <a href='https://www.meetup.com/Monadic-Warsaw/' target='_blank'>Monadic Warsaw</a>, Ewa Kruzynska and <a href='https://twitter.com/monad_cat' target='_blank'>Michal Kawalec</a>. With almost six hundred members it grew up to be one of the biggest Haskell meetups in Europe. We've had speakers and visitors from all over the world and we also host a <a href='https://www.youtube.com/channel/UCCeiYYR2fCXarkfSqqFBwuA' target='_blank'>YouTube channel</a>. It is our way of popularizing functional programming and building a community of interested people. We are sure the summer school will give us as much fun as Monadic Warsaw.
-              </p>
-              <h2 class='title left'><span class='first'>S</span>cholarship <span class='second'>P</span>rogramme</h2>
+              <h2 class='title right'><span class='first'>S</span>cholarship <span class='second'>P</span>rogramme</h2>
 
-              <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The first edition was really successful, so we're really happy that we can continue offering it this year as well.</p>
+              <p>We are deligted to offer a means based scholarship programme. If you are unable to attend the summer school because of financial reasons, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself.</p>
 
               <h4 class='external-btn'>
                 <a class="button button-primary" href="https://docs.google.com/forms/d/1WUg1UTIOodSxjzxwFk0dToQNsLtJqtxc8GeK2cbhoUM/" target='_blank'>Apply for a scholarship</a>
@@ -124,10 +117,10 @@
 
             <div class='row'>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/ramon.jpg' />
                     <h3 class='name'><span class='first'>R</span>amon Soto <span class='second'>M</span>athiesen</h3>
                     <div class='bio'>
-                      A functional programmer who straddles the boundary between industry and academia. 
+                      A passionate computer scientist devoted to SAFE Haskell
                     </div>
                 </div>
 
@@ -191,7 +184,7 @@
             </div>
 
             <div class='row'>
-              <h2 class='wide'>And more after the CFP</h2>
+              <h2 class='wide'>More speakers revealed after the CFP closes</h2>
             </div>
         </div>
     </div>
@@ -202,15 +195,37 @@
 
         <p>Do you want to lead workshops at the summer school? We would love to invite you to be a speaker at our event.</p>
 
-        <p>We are looking for people interested in leading workshops spanning four to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will have three tracks, a beginners one that caters to programmers that have limited Haskell experience and two for people who are comfortable with the language and want to learn new concepts. We will allocate your talk to a track that fits it best based on your answers on the submission form.</p>
+        <p>We are looking for people interested in leading workshops spanning four to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. There will be three tracks, a beginners one that caters to programmers that have limited Haskell experience and two for people who are comfortable with the language and want to learn new concepts. We will allocate your talk to a track that fits it best based on your answers on the submission form.</p>
 
-        <p>Our summer school is not about making money, it's about spreading our love of Haskell and functional programming. Because of that we will cover accommodation costs along with a ticket to the event for all speakers.</p>
+        <p>Accommodation in a hotel in Poznań and a ticket to the event is covered for all speakers.</p>
 
         <h2 class='external-btn'>
           <a class="button button-primary" href="https://docs.google.com/forms/d/1RJu05ITlTjKZKomTFzPhBVmyUzPCi6QyaEf3Q9kiUeY" target='_blank'>Submit a proposal</a>
         </h2>
 
         <h4>Deadline: 29th of February 2020</h4>
+      </div>
+    </div>
+
+    <div class='organizers'>
+      <div class='container'>
+        <h2 class='title center'><span class='first'>O</span>rganizer<span class='second'>s</span></h2>
+            <div class='row'>
+                <div class='col-6 column'>
+                    <img src='/static/krzysiek.jpg' />
+                    <h3 class='name'><span class='first'>E</span>wa <span class='second'>K</span>rużyńska</h3>
+                    <div class='bio'>
+                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
+                    </div>
+                </div>
+                <div class='col-6 column'>
+                    <img src='/static/michal.jpg' />
+                    <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
+                    <div class='bio'>
+                      Software engineer at <a href='https://x-team.com'>X-Team</a>, speaker, <a href='https://twitter.com/monad_cat'>FP evangelist</a>, secretly a physicist
+                    </div>
+                </div>
+            </div>
       </div>
     </div>
 
