--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,7 @@
                     <img src='/static/michal.jpg' />
                     <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
                     <div class='bio'>
-                      Software engineer at <a href='https://x-team.com'>X-Team</a>, speaker, <a href='https://twitter.com/monad_cat'>FP evangelist</a>, secretly a physicist
+                      Software engineer at <a href='https://x-team.com'>X-Team</a>, speaker, Haskeller, <a href='https://twitter.com/monad_cat'>FP evangelist</a>, secretly a physicist
                     </div>
                 </div>
             </div>
